[gd_scene load_steps=7 format=3 uid="uid://dmfh1imb32ewl"]

[ext_resource type="Script" uid="uid://7brapxhwtppo" path="res://Scripts/Enemies/scout_enemy.gd" id="1_qeg1l"]
[ext_resource type="PackedScene" uid="uid://c42lfqmk810gn" path="res://Scenes/damage_popup.tscn" id="2_wlj0x"]
[ext_resource type="PackedScene" uid="uid://bpc8aofva4cdn" path="res://Scenes/xp.tscn" id="3_ne5cx"]
[ext_resource type="Texture2D" uid="uid://c8lhac3xv17qc" path="res://Assets/enemy.png" id="4_ne5cx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_614tr"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_ptqu6"]
radius = 29.0

[node name="ScoutEnemy" type="RigidBody2D" groups=["Enemy"]]
mass = 30.0
gravity_scale = 0.0
script = ExtResource("1_qeg1l")
health = 5.0
speed = 150.0
damage_popup_scene = ExtResource("2_wlj0x")
xp_scene = ExtResource("3_ne5cx")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
texture = ExtResource("4_ne5cx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_614tr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("4_ne5cx")
texture_scale = 1.5

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ptqu6")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
